✨ feat: add auth header + states

--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -420,5 +420,6 @@
 	"pleaseEnterAZipCpode": "Bitte gib eine gültige Postleitzahl ein.",
 	"dateMustBeBefore": "Das Datum muss vor dem {date} liegen.",
 	"atLeastXChars": "Mindestens {amount} Zeichen notwendig.",
-	"noResults": "Keine Ergebnisse"
+	"noResults": "Keine Ergebnisse",
+	"noDataAvailable": "Keine Daten verfügbar"
 }
