✨ feat: implement working participant table

--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -426,5 +426,6 @@
 	"pleaseEnterAValidDate": "Bitte gib ein gültiges Datum ein.",
 	"notFound": "Nicht gefunden",
 	"statistics": "Statistiken",
-	"participants": "Teilnehmende"
+	"participants": "Teilnehmende",
+	"comingSoon": "Bald verfügbar"
 }
