✨ feat: add signup page

--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -301,7 +301,7 @@
 	"assistantFlowRoleNSA1": "Vertreter*in eines nichtstaatlichen Akteurs",
 	"assistantFlowRoleNSA2": "Du vertrittst eine*n nichtstaatliche*n Akteur*in, zum Beispiel <em>Ärzte ohne Grenzen</em> oder <em>Greenpeace International</em>.",
 	"assistantFlowRoleNSA3": "Du kannst dich frei zwischen allen Gremien bewegen und immer dort mitarbeiten, wo gerade die für deine Organisation wichtigsten Themen besprochen werden.",
-	"assistantFlowRolePress1": "Journalist*in",
+	"journalist": "Journalist*in",
 	"assistantFlowRolePress2": "Als Journalist*in der Konferenzpresse berichtest du über die Geschehnisse in den Gremien.",
 	"assistantFlowRolePress3": "Du schreibst Artikel für die Printzeitung oder produzierst die Fernsehnachrichten, die an den Konferenzabenden gezeigt werden.",
 	"assistantFlowRoleOther1": "Andere spezielle Rolle",
@@ -427,5 +427,19 @@
 	"notFound": "Nicht gefunden",
 	"statistics": "Statistiken",
 	"participants": "Teilnehmende",
-	"comingSoon": "Bald verfügbar"
+	"comingSoon": "Bald verfügbar",
+	"howDoIApply": "Wie bewerbe ich mich?",
+	"thisDiagramShowHowToApply": "Das folgende Diagramm stellt dar, wie Sie sich auf welche Rolle bewerben.",
+	"whichRoleDoIWantToTakeInTheConference": "Welche Rolle möchte ich auf der Konferenz einnehmen?",
+	"delegateOfACountry": "Delegation\neines Landes",
+	"nonStateActorDiagram": "Nichtstaatliche&ast;r\nAkteur&ast;in",
+	"doIhavePeopleToApplyWith": "Habe ich Personen, mit denen\nich mich als Gruppe bewerben kann?",
+	"didSomeoneOfTheseAlreadyCreateADelegation": "Hat eine der Personen schon\neine Delegation angelegt?",
+	"individualApplicationDiagram": "Einzel-\nbewerbung",
+	"createDelegationDiagram": "Delegation\nanlegen",
+	"joinDelegationDiagram": "Delegation\nbeitreten",
+	"specialRole": "Spezielle Rolle",
+	"didMyStudentsAlreadyCreateADelegation": "Haben meine Schüler*innen\nschon eine oder mehrere\nDelegationen erstellt?",
+	"waitForSignupOfMyStudents": "Auf Anmeldung\nIhrer Schüler*innen\nwarten",
+	"signupAsSupervisor": "Anmeldung als\nBetreuer*in"
 }
