--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -335,6 +335,10 @@
 	"adminSettings": "Einstellungen",
 	"adminStats": "Statistiken",
 	"adminPlausibility": "Plausibilität",
+	"adminAssignment": "Zuteilung",
+	"adminAssignmentDescription": "Dieses Tool führt dich interaktiv durck die Zuweisung von Angemeldeten Teilnehmenden zu Delegationen. Ein Algorithmus mancht dabei Vorschläge, wie die Verteilung am besten aufgeht.<br><strong>Laden Sie zunächst die Ergebnisse als JSON-Datei herunter und starten Sie dann das Tool. Sie werden aufgefordert, die gerade heruntergeladene Datei hochzuladen.</strong>",
+	"downloadCurrentRegistrationData": "Aktuelle Anmeldedaten herunterladen",
+	"startAssistant": "Assistent starten",
 	"adminUsers": "Teilnehmende",
 	"adminDelegations": "Delegationen",
 	"adminSingleParticipants": "Einzelteilnehmende",
