✨ feat: add backend checks for closed application timeframes

--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -450,5 +450,6 @@
 	"singleApplicationMotivation": "Warum bewirbst du dich bei der Konferenz?",
 	"singleApplicationExperience": "Wie viel Erfahrung hast du mit politischen Planspielen wie Model United Nations?",
 	"inAllDelegations": "In allen Delegationen",
-	"inTheConference": "In der Konferenz"
+	"inTheConference": "In der Konferenz",
+	"applicationTimeframeClosed": "Der Anmeldezeitraum ist geschlossen."
 }
