✨ feat: add permanent home to breadcrumbs

--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -18,7 +18,7 @@
 	"homeHeroSub": "Gemeinsame Anmeldeplattform für MUN-SH und MUNBW",
 	"home": "Startseite",
 	"homeRegistration": "Zur Konferenz anmelden",
-	"homeRegistrationSub": "Melde dich für eine Konferenz an – alleine oder in einer Gruppe",
+	"homeRegistrationSub": "Melde dich für eine Konferenz an - allein oder in einer Gruppe",
 	"homeRegistrationBtn": "Jetzt anmelden",
 	"homeYourConferences": "Meine Konferenzen",
 	"homeYourConferencesSub": "Vervollständige eine bestehende Anmeldung und sieh nach, welche Aufgaben noch zu erledigen sind",
