🚧 wip: conference state

--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -37,7 +37,7 @@
 	"unknownLanguage": "Sprache unbekannt",
 	"registrationOpen": "Anmeldung möglich bis <span class=\"whitespace-nowrap\">{date}</span>",
 	"registrationClosed": "Anmeldung geschlossen",
-	"registrationNotYetOpen": "Anmeldung startet am <span class=\"whitespace-nowrap\">{date}</span>",
+	"registrationNotYetOpen": "Anmeldung startet bald!",
 	"unknownRegistrationStatus": "Anmeldestatus unbekannt",
 	"alreadRegistered": "Bereits angemeldet",
 	"RegistrationNotPossible": "Anmeldung nicht möglich",
@@ -401,6 +401,8 @@
 	"conferenceStartAssignment": "Start der Zuweisung",
 	"conferenceStatus": "Konferenzstatus",
 	"conferenceStatusPre": "Vor der Konferenz",
+	"conferenceStatusParticipantRegistration": "Teilnehmer*innenanmeldung",
+	"conferenceStatusPreparation": "Vorbereitung",
 	"conferenceStatusActive": "Aktive Konferenz",
 	"conferenceStatusPost": "Nach der Konferenz",
 	"conferenceDataSavingPrompt": "Bist du sicher, dass du die Änderungen speichern möchtest? Alle grün markierten Felder werden live verändert.",
