--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -336,7 +336,8 @@
 	"adminAssignment": "Assignment",
 	"adminAssignmentDescription": "This tool guides you interactively through the assignment of registered participants to delegations. An algorithm makes suggestions on how the distribution works best.<br><strong>Download the results as a JSON file first and then start the tool. You will be asked to upload the file you just downloaded.</strong>",
 	"downloadCurrentRegistrationData": "Download current registration data",
-	"startAssistant": "Start Assistant",
+	"startAssignment": "Start Assignment",
+	"applyAssignment": "Apply Assignment",
 	"adminUsers": "Participants",
 	"adminDelegations": "Delegations",
 	"adminSingleParticipants": "Individual Participants",
