✨ feat: add nation to delegation table

--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -464,5 +464,6 @@
 	"areYouSureYouWantToExport": "Die Daten enthalten möglicherweise sensible Informationen. Bist du sicher, dass du die Daten exportieren möchtest?",
 	"thisExportContainsSensitiveData": "Bitte beachte, dass dieser Export sensible Daten enthält und nur an Personen weitergegeben werden sollte, die dazu berechtigt sind.",
 	"exportFrom": "Export aus {appName}",
-	"createdOn": "Erstellt am {date} um {time}"
+	"createdOn": "Erstellt am {date} um {time}",
+	"nation": "Nation"
 }
