✨ feat: Many new features, including logic for committee asignment

--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -471,5 +471,23 @@
 	"informationOnYourCountry": "Informationen zu deinem Land",
 	"informationOnYourNSA": "Informationen zu deinem nichtstaatlichen Akteur",
 	"youWillRepresent": "Du vertrittst",
-	"status": "Status"
+	"status": "Status",
+	"committeeDoesNotBelongToConferenceError": "Fehler: Ein Gremium gehört nicht zur Konferenz.",
+	"currentTasks": "Aktuelle Aufgaben",
+	"committeeAssignment": "Gremienzuteilung",
+	"committeeAssignmentAlertDescription": "Als Delegationsleitung musst du zeitnah die Gremienverteilung vornehmen. Dabei wird entschieden, wer von euch euren Staat in welchem Gremium vertreten wird. Sprich dich dafür bitte mit deinen Mitdelegierten ab und trefft gemeinsam eine Entscheidung, die du dann eintragen kannst.<br>Die Zuteilung kann später nicht geändert werden!",
+	"committeeAssignmentAlertDescriptionNonHeadDelegate": "Dein*e Delegationsleiter*in muss zeitnah die Gremienverteilung vor. Dabei wird entschieden, wer von euch euren Staat in welchem Gremium vertreten wird. Sprecht euch dafür bitte ab und trefft gemeinsam eine Entscheidung, die eure Delegationsleitung dann eintragen kann.",
+	"assignCommittees": "Gremien jetzt zuteilen",
+	"theFollowingCommitteesAreAssignable": "Die folgenden Gremien können verteilt werden",
+	"seat": "Platz",
+	"committeeDoesNotBelongToConferenceError": "Das Gremium gehört nicht zur Konferenz!",
+	"pleaseAssignAllMembers": "Bitte wähle für jedes Delegationsmitglied ein Gremium!",
+	"failedToAssignCommittees": "Etwas ist schiefgelaufen: Gremien konnten nicht verteilt werden. Bitte versuche es erneut oder wende dich an den Support.",
+	"committeesSucessfullyAssigned": "Gremien wurden erfolgreich verteilt.",
+	"personalStatus": "Persönlicher Status",
+	"personalStatusUnderDevelopment": "Noch in Entwicklung",
+	"personalStatusUnderDevelopmentDescription": "Die persönliche Statusübersicht für die postalische Anmeldung sowie die Beitragszahlung befinden sich aktuell noch in der Entwicklung. Bitte beachtet die Informationen, die euch die Teilnehmendenbetreeung per E-Mail zusendet.",
+	"applicationRejected": "Anmeldung Abgelehnt",
+	"applicationRejectedText": "Leider konnten wir dich nicht zur Konferenz zulassen. Entweder wurde die Anmeldung nicht abgeschlossen, es gab zu viele Anmeldungen für die Konferenz oder es hat individuelle Gründe. Bei Fragen wende dich gerne an die Teilnehmendenbetreuung.",
+	"onlyHeadDelegateCanAssignCommittees": "Nur die Delegationsleitung kann Gremien zuweisen."
 }
