--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -489,5 +489,8 @@
 	"personalStatusUnderDevelopmentDescription": "Die persönliche Statusübersicht für die postalische Anmeldung sowie die Beitragszahlung befinden sich aktuell noch in der Entwicklung. Bitte beachtet die Informationen, die euch die Teilnehmendenbetreeung per E-Mail zusendet.",
 	"applicationRejected": "Anmeldung Abgelehnt",
 	"applicationRejectedText": "Leider konnten wir dich nicht zur Konferenz zulassen. Entweder wurde die Anmeldung nicht abgeschlossen, es gab zu viele Anmeldungen für die Konferenz oder es hat individuelle Gründe. Bei Fragen wende dich gerne an die Teilnehmendenbetreuung.",
-	"onlyHeadDelegateCanAssignCommittees": "Nur die Delegationsleitung kann Gremien zuweisen."
+	"onlyHeadDelegateCanAssignCommittees": "Nur die Delegationsleitung kann Gremien zuweisen.",
+	"preparation": "Inhaltliche Vorbereitung",
+	"preparationDescription": "Um an den Debatten teilnehmen zu können, musst du dich auf deine Rolle, dein Gremium und deine Themen vorbereiten. Dazu gehört, dass du Positions- und Arbeitspapiere schreibst. Wie diese Papiere aussehen, wo sie einzureichen sind sowie Vorbereitungstexte zu den Themen und weitere Informationen erfährst du, wenn du auf den folgenden Button klickst.",
+	"goToPreparation": "Vorbereitungsmaterialien öffnen"
 }
