--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -431,5 +431,11 @@
 	"onlyHeadDelegateCanAssignCommittees": "Only the head delegate can assign committees.",
 	"preparation": "Preparation",
 	"preparationDescription": "To be able to take part in the debates, you need to prepare for your role, your committee and your topics. This includes writing position and working papers. You can find out what these papers look like, where to submit them, preparatory texts on the topics and more information by clicking on the button below.",
-	"goToPreparation": "Open Preparation Hub"
+	"goToPreparation": "Open Preparation Hub",
+	"committeeAssignmentAlertDescriptionSupervisor": "Your Head Delegates must now specify, who will represent their country in which committe. If you see this task, at least one of your delegations hasn't finished assigning their committees.",
+	"preparationGuide": "Link to the preparation guide",
+	"conferenceInfo": "Conference Information",
+	"conferenceInfoDescription": "Lies dir die aktuellen Konferenzinformationen aufmerksam durch und schaue immer mal wieder nach, ob es Neuigkeiten gibt.",
+	"goToConferenceInfo": "Access Information Page",
+	"preview": "Preview"
 }
