--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -433,7 +433,7 @@
 	"postalRegistration": "Postal Registration",
 	"personalStatusDescription": "Here you can track your registration status. This lists all formal stepts you have to prepare for the conference in order to attend. You cannot participate without this checklist complete!",
 	"takeAction": "Take Action",
-	"userAgreement": "Participation Agreement",
+	"userAgreement": "Terms and Conditions",
 	"guardianAgreement": "Guardian Agreement",
 	"mediaAgreement": "Media Usage Agreement",
 	"paymentDescription": "You can pay the participation fee just for yourself, or transfer it collectively for your delegation or even for several delegations or individual participants.",
@@ -450,7 +450,7 @@
 	"nationSeats": "Nation Seats",
 	"ibanMustBe22Characters": "IBAN must be 22 characters without spaces",
 	"pleaseEnterAValidIBAN": "IBAN is not valid",
-	"bicMustBe8Characters": "BIC must have 8 characters",
+	"pleaseEnterAValidBIC": "BIC is not valid",
 	"currencyMustBe3Characters": "Currency must be 3 Letter Acronym, e.g. 'EUR'",
 	"bankingInformation": "Banking Information",
 	"postalInformation": "Postal Information",
@@ -459,5 +459,36 @@
 	"bic": "BIC",
 	"accountHolder": "Account Holder",
 	"currency": "Currency",
-	"fee": "Fee"
+	"fee": "Fee",
+	"pleaseEnterAPositiveNumber": "Please enter a postive number",
+	"pleaseEnterAValidAmount": "Please enter a valid amount",
+	"statusLegend": "Status Legend",
+	"statusLegendDone": "Completed",
+	"statusLegendProblem": "Problem – Please contact participant care if they have not already reached out to you",
+	"statusLegendPending": "Pending – the task has not yet been completed by you or marked off by participant support",
+	"singlePayment": "Single Payment",
+	"singlePaymentBtn": "Pay for myself",
+	"singlePaymentDescription": "Here you can pay the participation fee only for yourself.",
+	"delegationPayment": "Delegation Payment",
+	"delegationPaymentBtn": "Pay for my delegation",
+	"delegationPaymentDescription": "Here you can pay the participation fee for the entire delegation.",
+	"groupPayment": "Group Payment",
+	"groupPaymentBtn": "Pay for multiple participants",
+	"groupPaymentDescription": "Here you can pay the participation fee for multiple participants. This way, the fee for delegation members, support staff, and individual participants can be paid with one transfer.",
+	"paymentMethodNotAvailable": "Payment Method Not Available",
+	"referenceMaker": "Transaction Helper",
+	"referenceMakerDescription": "If you are making a transfer for yourself or several people to pay the contribution, you must first generate a reference here so that we can assign the transfer. Click on the button below to create a reference and then receive the transfer details.",
+	"youPayForXParticipants": "You are about to pay for {numParticipants} participant(s):",
+	"generateReference": "Generate Transaction Reference",
+	"reference": "Reference",
+	"copy": "Copy to Clipboard",
+	"referenceMakerGeneratedDescription": "You can now go ahaed and use the information below to make the payment. Please make sure you copy all information below exactly. If you can, use the girocode (QR-Code) on the right or copy & paste all of the information to avoid spelling mistakes.",
+	"abroadTransactionWarning": "If you are making transfers from abroad: Please pay particular attention to ensuring that all information is correct. Also make sure that you are covering the costs of the international transfer yourself and that the fee is not deducted from the amount we receive. Please also make sure that you use the correct currency ({currency}). If you are not making a SWIFT transfer, please contact Participant Support first.",
+	"abroadTransaction": "Transactions from Abroad",
+	"giroCode": "GiroCode",
+	"giroCodeDescription": "Scan the GiroCode with your banking app to pay quickly and easily (might only work from EU Countries with SEPA Transactions).",
+	"reason": "Reason",
+	"amount": "Amount",
+	"transactionDetails": "Transaction Details",
+	"groupPaymentNotYetImplemented": "Unfortunately, the payment process for groups is not yet complete. For group payments, please contact the participant support team directly, who will manually create a reference for the intended purpose. Please let the participant support team know which participants you would like to pay the fee for."
 }
