--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -491,10 +491,10 @@
 	"postalRegistration": "Postalische Anmeldung",
 	"personalStatusDescription": "Hier kannst du deinen persönlichen Status verflogen. Dieser umfasst alle formellen Schritte, die du erledigen musst. Du kannst an der Konferenz nicht teilnehmen, wenn du nicht alle Aufgaben von dieser Liste erledigt hast!",
 	"takeAction": "Jetzt Erledigen",
-	"userAgreement": "Teilnahmevereinbarung",
+	"userAgreement": "AGB",
 	"guardianAgreement": "Einwilligung der Erziehungsberechtigten",
 	"mediaAgreement": "Vereinbarung über Mediennutzung",
-	"paymentDescription": "Du kannst den Teilnahmebeitrag nur für dich bezahlen, oder gesammelt für deine Delegation oder sogar für mehrere Delegationen bzw. Einzelteilnehmende überweisen.",
+	"paymentDescription": "Du kannst den Teilnahmebeitrag nur für dich, gesammelt für deine Delegation oder sogar für delegationsübergreifend für beliebig viele Teilnehmende bezahlen. Betreuende können den Beitrag für mehrere Delegationen auf einmal entrichten.",
 	"preparation": "Inhaltliche Vorbereitung",
 	"preparationDescription": "Um an den Debatten teilnehmen zu können, musst du dich auf deine Rolle, dein Gremium und deine Themen vorbereiten. Dazu gehört, dass du Positions- und Arbeitspapiere schreibst. Wie diese Papiere aussehen, wo sie einzureichen sind sowie Vorbereitungstexte zu den Themen und weitere Informationen erfährst du, wenn du auf den folgenden Button klickst.",
 	"goToPreparation": "Vorbereitungsmaterialien öffnen",
@@ -508,7 +508,7 @@
 	"nationSeats": "Sitze von Ländern",
 	"ibanMustBe22Characters": "IBAN muss 22 Zeichen ohne Leerzeichen haben",
 	"pleaseEnterAValidIBAN": "IBAN ist ungültig",
-	"bicMustBe8Characters": "BIC muss 8 Zeichen haben",
+	"pleaseEnterAValidBIC": "BIC ist ungültig",
 	"currencyMustBe3Characters": "Währung muss 3 Zeichen haben, z.B. 'EUR'",
 	"bankingInformation": "Überweisungsinformationen",
 	"postalInformation": "Postalische Informationen",
@@ -517,5 +517,36 @@
 	"bic": "BIC",
 	"accountHolder": "Kontoinhaber*in",
 	"currency": "Währung",
-	"fee": "Teilnahmebeitrag"
+	"fee": "Teilnahmebeitrag",
+	"pleaseEnterAPositiveNumber": "Nur postive Werte erlaubt",
+	"pleaseEnterAValidAmount": "Bitte einen gültigen Geldbetrag eingeben (maximal 2 Nachkommastellen)",
+	"statusLegend": "Statuslegende",
+	"statusLegendDone": "Erledigt",
+	"statusLegendProblem": "Problem – Bitte an die Teilnehmendenbetreuung wenden, wenn sich diese nicht schon bei Ihnen gemeldet hat",
+	"statusLegendPending": "Ausstehend – die Aufgabe ist noch nicht erledigt worden bzw. noch nicht durch die Teilnehmendenbetreuung abgehakt",
+	"singlePayment": "Einzelüberweisung",
+	"singlePaymentBtn": "Für mich bezahlen",
+	"singlePaymentDescription": "Hier kannst du den Teilnahmebeitrag nur für dich selbst entrichten.",
+	"delegationPayment": "Delegationsüberweisung",
+	"delegationPaymentBtn": "Für die Delegation bezahlen",
+	"delegationPaymentDescription": "Hier kannst du den Teilnahmebeitrag für die gesamte Delegation entrichten.",
+	"groupPayment": "Gruppenüberweisung",
+	"groupPaymentBtn": "Für mehrere Teilnehmende bezahlen",
+	"groupPaymentDescription": "Hier kannst du den Teilnahmebeitrag für mehrere Teilnehmende entrichten. Auf diese Weise kann der Beitrag für Delegationsmitglieder, Betreuende und Einzelteilnehmende mit einer Überweisung bezahlt werden.",
+	"paymentMethodNotAvailable": "Bezahlmethode nicht verfügbar",
+	"referenceMaker": "Überweisungshelfer",
+	"referenceMakerDescription": "Wenn du eine Überweisung für dich oder mehrere Personen tätigst, um den Beitrag zu bezahlen, musst du als erstes hier eine Referenz generieren, sodass wir die Überweisung zuordnen können. Klicke auf den Button unten um eine Referenz zu erstellen und anschließend die Überweisungsdaten zu erhalten.",
+	"youPayForXParticipants": "Du bist dabei für {numParticipants} Teilnehmende(n) den Beitrag zu zahlen:",
+	"generateReference": "Überweisungs-Referenz generieren",
+	"reference": "Referenz",
+	"copy": "In Zwischenablage Kopieren",
+	"referenceMakerGeneratedDescription": "Sie können nun mit den untenstehenden Informationen fortfahren und die Zahlung vornehmen. Achten Sie darauf, alle untenstehenden Informationen exakt zu kopieren. Verwenden Sie nach Möglichkeit den Girocode (QR-Code) auf der rechten Seite oder kopieren und fügen Sie alle Informationen ein, um Rechtschreibfehler zu vermeiden.",
+	"abroadTransactionWarning": "Wenn Sie Überweisungen aus dem Ausland vornehmen: Bitte achten Sie besonders genau darauf, dass alle Informationen richtig sind. Stellen Sie außerdem sicher, dass Sie selbst die Kosten für die Auslandsüberweisung tragen und die Gebühr nicht von der Summe, die wir erhalten, abgezogen wird. Bitte achten Sie auch auf die richtige Währung ({currency}). Wenn Sie keine SWIFT-Überweisung durchführen, wenden Sie sich bitte zuerst an die Teilnehmendenbetreuung.",
+	"abroadTransaction": "Auslandsüberweisungen",
+	"giroCode": "GiroCode",
+	"giroCodeDescription": "Scanne den GiroCode mit deiner Banking-App um schnell und einfach zu zahlen.",
+	"reason": "Verwendungszweck",
+	"amount": "Betrag",
+	"transactionDetails": "Überweisungsdaten",
+	"groupPaymentNotYetImplemented": "Das Bezahlverfahren für Gruppen ist leider noch nicht fertig. Bitte wenden Sie sich für Gruppenzahlungen direkt  an die Teilnehmendenbetreuung, die Ihnen händisch eine Referenz für den Verwendungszweck erstellt. Bitte teile der Teilnehmendenbetreuung mit, für welche Teilnehmende du den Beitrag zahlen möchtest."
 }
