--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -491,5 +491,13 @@
 	"amount": "Amount",
 	"transactionDetails": "Transaction Details",
 	"groupPaymentNotYetImplemented": "Unfortunately, the payment process for groups is not yet complete. For group payments, please contact the participant support team directly, who will manually create a reference for the intended purpose. Please let the participant support team know which participants you would like to pay the fee for.",
-	"postalRegistrationNotYetImplemented": "There is no option to generate PDFs individually for postal registration yet. The participant support team has sent out information by email about how postal registration will work this year. If you have any questions, please contact the participant support team."
+	"postalRegistrationNotYetImplemented": "There is no option to generate PDFs individually for postal registration yet. The participant support team has sent out information by email about how postal registration will work this year. If you have any questions, please contact the participant support team.",
+	"paymentAdminDescription": "Here the accountant can search for transaction references and change the payment status of participants",
+	"referenceSearch": "Reference Search",
+	"waitingForYourInput": "Waitung for your input...",
+	"noPaymentFound": "No transaction with this reference found",
+	"paymentRecieved": "The payment was already marked as recieved with transaction on {date}!",
+	"referencedUsers": "Referenced Users",
+	"markAsProblem": "Mark as Problem",
+	"markAsRecieved": "Mark as Recieved"
 }
