✨ feat: Last Puzzle Pieces

--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -558,5 +558,7 @@
 	"referencedUsers": "Referenzierte Teilnehmende",
 	"markAsProblem": "Als Problem markieren",
 	"markAsRecieved": "Als Erhalten markieren",
-	"attendance": "Anwesenheit"
+	"attendance": "Anwesenheit",
+	"enterDateOfdateReceipt": "Empfangsdatum eingeben",
+	"recievedDate": "Empfangen am"
 }
