--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -500,5 +500,7 @@
 	"referencedUsers": "Referenced Users",
 	"markAsProblem": "Mark as Problem",
 	"markAsRecieved": "Mark as Recieved",
-	"attendance": "Attendance"
+	"attendance": "Attendance",
+	"enterDateOfdateReceipt": "Enter Date of Receipt",
+	"recievedDate": "Revieved at"
 }
